# run-deploy

./: .gitignore  deploy.sh
sample-service/: Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt
